@@ -101,6 +101,7 @@ int     PG_VERSION(AGENT_REQUEST *request, AGENT_RESULT *result);
 int     PG_STARTTIME(AGENT_REQUEST *request, AGENT_RESULT *result);
 int     PG_UPTIME(AGENT_REQUEST *request, AGENT_RESULT *result);
 int     PG_PREPARED_XACTS_COUNT(AGENT_REQUEST *request, AGENT_RESULT *result);
+int     PG_PREPARED_XACTS_RATIO(AGENT_REQUEST *request, AGENT_RESULT *result);
 
 int     PG_SETTING(AGENT_REQUEST *request, AGENT_RESULT *result);
 int     PG_SETTING_DISCOVERY(AGENT_REQUEST *request, AGENT_RESULT *result);
